<resources>
    <string name="app_name">Score Keeper</string>

    <string name="layout_weight">1</string>
    <string name="player_nameA">Player A</string>
    <string name="button1_text">strike</string>
    <string name="button2_text">double</string>
    <string name="player_nameB">Player B</string>
    <string name="text_score">0</string>
    <string name="text_view_text">0</string>
    <string name="button_reset_text">Reset</string>


</resources>
